# FSRewire-client

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml
src/: env.rs  main.rs  state.rs
src/schema/: mod.rs  simconnect.rs
src/ui/: icons.rs  mod.rs  system_try.rs
src/utils/: file.rs  mod.rs  msfs.rs  simconnect.rs  udp.rs  wgpu.rs
