[package]
name = "fsrewire_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
serde = "1.0.196"
quick-xml = { version = "0.31", features = ["serialize"] }
serde_derive = "1.0.196"
encoding = "0.2.33"
