[package]
name = "fsrewire_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
serde = "1.0.196"
quick-xml = { version = "0.31", features = ["serialize"] }
windows-sys = { version = "0.52", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_Graphics_Gdi",
  "Win32_UI_Shell",
] }
serde_derive = "1.0.196"
encoding = "0.2.33"
tray-icon = "0.8.3"
winit = "0.29"
image = "0.24"
wgpu = "0.19.1"
env_logger = "0.10"
pollster = "0.3.0"
glyphon = "0.5.0"
